--- a/vignettes/ProFuse.Rmd
+++ b/vignettes/ProFuse.Rmd
@@ -157,12 +157,12 @@ MF2F = profuseMultiBandFound2Fit(image_list=image_list,
                                     )
 ```
 
-Now we actually run the fit with **Highlander**:
+Now we actually run the fit with **Highlander** (this is the example fit as run for the associated paper):
 
-```{r, eval=FALSE}
+```{r, eval=evalglobal}
 highfit = Highlander(
-  parm = MultiFit$init,
-  Data = MultiFit,
+  parm = MF2F$init,
+  Data = MF2F,
   likefunc = profitLikeModel,
   seed = 666,
   ablim = 1,
@@ -172,24 +172,26 @@ highfit = Highlander(
 )
 ```
 
-```{r}
-highlander = profuseMultiBandDoFit(MF2F=MF2F, Niters = c(1e3, 1e3))
+For convenience we can also just pass our *MF2F* object into the *profuseMultiBandDoFit* function. This will still run Highlander (with slightly restricted options availble), but it has the advantage that it will properly pass all of the fitting limits through (a non-trivial task with many image and complex combinations of logged parameters).
+
+```{r, eval=FALSE}
+highfit = profuseMultiBandDoFit(MF2F=MF2F, Niters = c(1e3, 1e3))
 ```
 
 We can now extract the star formation histories for the bulge and the disk separately:
 
 ```{r fig.width=5, fig.height=5, dpi=100, eval=evalglobal}
 magcurve(massfunc_snorm_trunc(age=x,mSFR=10^highfit$parm["mSFR_1"],mpeak=highfit$parm["mpeak_1"],mperiod=10^highfit$parm["mperiod_1"],
-  mskew=highfit$parm["mskew_1"], magemax=agemax/1e9),0,13.8e9,add=FALSE,col='red', ylim=c(0,2),xlab='Age (Yr)', ylab='SFR (Msol / Yr)')
+  mskew=highfit$parm["mskew_1"], magemax=agemax/1e9),0,13.8e9,add=FALSE,col='red', ylim=c(0,2.5),xlab='Age (Yr)', ylab='SFR (Msol / Yr)')
 magcurve(massfunc_snorm_trunc(age=x,mSFR=10^highfit$parm["mSFR_2"],mpeak=highfit$parm["mpeak_2"],mperiod=10^highfit$parm["mperiod_2"],
-  mskew=highfit$parm["mskew_2"], magemax=agemax/1e9),0,13.8e9,add=TRUE,col='blue', ylim=c(0,2),xlab='Age (Yr)', ylab='SFR (Msol / Yr)')
+  mskew=highfit$parm["mskew_2"], magemax=agemax/1e9),0,13.8e9,add=TRUE,col='blue')
 legend('topright', legend=c('Bulge', 'Disk'), col=c('red', 'blue'), lty=1)
 ```
 
 And we can check the final model image per band:
 
 ```{r fig.width=5, fig.height=5, dpi=100, eval=evalglobal}
-profitLikeModel(highfit$parm, MultiFit, makeplots = TRUE)
+profitLikeModel(highfit$parm, MF2F, makeplots = TRUE)
 ```
 
 We can also look at the SED per component, where as we might expect the bulge light is 'redder' than the disk light.
@@ -197,8 +199,8 @@ We can also look at the SED per component, where as we might expect the bulge li
 ```{r fig.width=5, fig.height=5, dpi=100, eval=evalglobal}
 if(highfit$parm[11] > log10(0.05)){highfit$parm[11] = log10(0.05)}
 if(highfit$parm[16] > log10(0.05)){highfit$parm[16] = log10(0.05)}
-bulgeSED = ParmOff(ProSpectSED, .args = c(as.list(highfit$parm[7:11]), MultiFit$data_ProSpect), .strip = '_1', .logged=c('mSFR', 'mperiod', 'Zfinal'))
-diskSED = ParmOff(ProSpectSED, .args = c(as.list(highfit$parm[7:11+5]), MultiFit$data_ProSpect), .strip = '_2', .logged=c('mSFR', 'mperiod', 'Zfinal'))
+bulgeSED = ParmOff(ProSpectSED, .args = c(as.list(highfit$parm[7:11]), MF2F$data_ProSpect), .strip = '_1', .logged=c('mSFR', 'mperiod', 'Zfinal'))
+diskSED = ParmOff(ProSpectSED, .args = c(as.list(highfit$parm[7:11+5]), MF2F$data_ProSpect), .strip = '_2', .logged=c('mSFR', 'mperiod', 'Zfinal'))
 
 magplot(cenwaves, Jansky2magAB(bulgeSED$Photom), log='', col='red', ylim=c(22,15), type='l', xlab='Wave / Ang', ylab='Mag')
 lines(cenwaves, Jansky2magAB(diskSED$Photom), col='blue')
