--- a/vignettes/ProFuse-MF2F-Setups.Rmd
+++ b/vignettes/ProFuse-MF2F-Setups.Rmd
@@ -43,7 +43,7 @@ for(i in filters){filtout=c(filtout,list(approxfun(getfilt(i))))}
 loc = c(1200,480)
 cut = -299:300
 
-cenwaves = cenwave[match(c('u_VST', 'g_VST', 'r_VST', 'i_VST', 'Z_VISTA', 'Y_VISTA', 'J_VISTA', 'H_VISTA', 'Ks_VISTA'), cenwave$filter),'cenwave']
+cenwaves = cenwave[match(filters, cenwave$filter),'cenwave']
   
 agemax = 13.3e9 - cosdistTravelTime(z=redshift, H0 = 67.8, OmegaM = 0.308)*1e9
 ```
